--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,27 @@
 .cache/
 .history/
 .lib/
+
+*~
+*.db
+*.jar
+*.class
+*.log
+application.conf
+
+# Scala-IDE specific
+.scala_dependencies
+.ecplise
+.project
+.classpath
+.settings
+.idea*/
+
+*.imp
+.DS_Store
+thumbs.db
+
+# sbt specific
 dist/*
 target/
 lib_managed/
@@ -12,6 +33,5 @@ src_managed/
 project/boot/
 project/plugins/project/
 
-# Scala-IDE specific
-.scala_dependencies
-.worksheet
+src/main/resources/webapp
+node_modules
