--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "voxui",
+  "name": "Vilya",
   "version": "0.0.1",
-  "description": "User interface for PBX project",
+  "description": "Generates UI artefacts for the project.",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -12,14 +12,14 @@
     "classie": "^0.1.0",
     "jade": "^1.5.0",
     "lodash": "^2.4.1",
-    "mithril": "^0.1.21"
+    "mithril": "^0.1.26"
   },
   "devDependencies": {
-    "grunt-browserify": "^2.1.4",
+    "grunt-browserify": "^3.2.0",
     "grunt-concurrent": "latest",
-    "grunt-contrib-copy": "^0.5.0",
+    "grunt-contrib-copy": "^0.7.0",
     "grunt-contrib-cssmin": "^0.10.0",
-    "grunt-contrib-jade": "^0.12.0",
+    "grunt-contrib-jade": "^0.13.0",
     "grunt-contrib-jshint": "latest",
     "grunt-contrib-watch": "latest",
     "grunt-nodemon": "latest"
